search render id & name

--- a/src/app/pokemon-search/pokemon-search.component.html
+++ b/src/app/pokemon-search/pokemon-search.component.html
@@ -4,7 +4,11 @@
   <button type="submit" >Search</button> 
 </form>
 
-<h3>{{searchedPokmon}}</h3>
+<div *ngIf="searchedPokmon">
+  <h3><span>Name: </span>{{searchedPokmon.name}}</h3>
+  <h3><span>Id: </span>{{searchedPokmon.id}}</h3>
+</div>
+
 
 <div>
   <button>Pokemon I've caught</button>
