--- a/src/app/my-pokemoms/my-pokemoms.component.html
+++ b/src/app/my-pokemoms/my-pokemoms.component.html
@@ -1,9 +1,11 @@
 <!--List my pokemons-->
 <h2>My Pokemons</h2>
 <ul class="pokemons">
-  <li *ngFor="let pokemon of pokemons" [class.selected]="pokemon == selectedPokemon" (click)="onSelect(pokemon)">
+  <li *ngFor="let pokemon of pokemons">
     <span class="badge">{{pokemon.id}}</span> {{pokemon.name | titlecase}}
   </li>
 </ul>
 
-<app-pokemon-detail [pokemon]="selectedPokemon"></app-pokemon-detail>
+<button (click)="goBack()">go back</button>
+
+
