--- a/src/app/pokemon-search/pokemon-search.component.html
+++ b/src/app/pokemon-search/pokemon-search.component.html
@@ -7,12 +7,13 @@
 <div *ngIf="searchedPokmon">
   <h3><span>Name: </span>{{searchedPokmon.name}}</h3>
   <h3><span>Id: </span>{{searchedPokmon.id}}</h3>
+ 
 </div>
 
 
 <div>
-  <button>Pokemon I've caught</button>
-  <button>Pokemon Wishlist</button>
+  <a [routerLink]="['/mypokemons', {name:name}]" (click)="saveIvCaught()">Pokemon I've caught</a>
+  <a routerLink="/mywishlist"   (click)="saveWishlist()">Pokemon Wishlist</a>
 </div>
 
 
