--- a/src/app/pokemon-search/pokemon-search.component.html
+++ b/src/app/pokemon-search/pokemon-search.component.html
@@ -11,9 +11,9 @@
 </div>
 
 
-<div>
+<div *ngIf="searchedPokmon">
   <a [routerLink]="['/mypokemons', {name:name}]" (click)="saveIvCaught()">Pokemon I've caught</a>
-  <a routerLink="/mywishlist"   (click)="saveWishlist()">Pokemon Wishlist</a>
+  <a [routerLink]="['/mywishlist', {name:name}]"   (click)="saveWishlist()">Pokemon Wishlist</a>
 </div>
 
 
