--- a/src/app/my-wishlist/my-wishlist.component.html
+++ b/src/app/my-wishlist/my-wishlist.component.html
@@ -1,9 +1,9 @@
-<!--List my wishlist-->
-<h2>My Pokemons</h2>
+<!--List my pokemons-->
+<h2>My Wishlist</h2>
 <ul class="pokemons">
-  <li *ngFor="let pokemon of pokemons" [class.selected]="pokemon == selectedPokemon" (click)="onSelect(pokemon)">
+  <li *ngFor="let pokemon of pokemons">
     <span class="badge">{{pokemon.id}}</span> {{pokemon.name | titlecase}}
   </li>
 </ul>
 
-<app-pokemon-detail [pokemon]="selectedPokemon"></app-pokemon-detail>
+<button (click)="goBack()">go back</button>
