--- a/src/app/pokemon-search/pokemon-search.component.css
+++ b/src/app/pokemon-search/pokemon-search.component.css
@@ -8,6 +8,8 @@ label {
 }
 input {
   padding: .5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   width: 100%;
   max-width: 600px;
   box-sizing: border-box;
