--- a/src/app/pokemon-search/pokemon-search.component.html
+++ b/src/app/pokemon-search/pokemon-search.component.html
@@ -5,7 +5,7 @@
 </form>
 
 <div *ngIf="searchedPokmon">
-  <h3><span>Name: </span>{{searchedPokmon.name}}</h3>
+  <h3><span>Name: </span>{{searchedPokmon.name | titlecase}}</h3>
   <h3><span>Id: </span>{{searchedPokmon.id}}</h3>
  
 </div>
