--- a/src/app/pokemon-search/pokemon-search.component.html
+++ b/src/app/pokemon-search/pokemon-search.component.html
@@ -6,16 +6,24 @@
 
 <div *ngIf="searchedPokmon">
   <h3><span>Name: </span>{{searchedPokmon.name | titlecase}}</h3>
-  <h3><span>Id: </span>{{searchedPokmon.id}}</h3>
- 
+  <h3><span>Id: </span>{{searchedPokmon.id}}</h3> 
 </div>
 
-
-<div *ngIf="searchedPokmon">
+<div class="save-btn" *ngIf="searchedPokmon">
   <a [routerLink]="['/mypokemons', {name:name}]" (click)="saveIvCaught()">Pokemon I've caught</a>
   <a [routerLink]="['/mywishlist', {name:name}]"   (click)="saveWishlist()">Pokemon Wishlist</a>
 </div>
 
+<div>
+  <h2>All Pokemons</h2>
+    <div class="all-names">
+      <a *ngFor="let name of allPokemonsName">{{name}}</a>
+    </div>
+
+
+  <button *ngIf="previous" (click)="getPreviousPage()">Previous</button>
+  <button *ngIf="next" (click)="getNextPage()">Next</button>
+</div>
 
 <!---->
 
