--- a/src/app/pokemon-search/pokemon-search.component.html
+++ b/src/app/pokemon-search/pokemon-search.component.html
@@ -4,7 +4,7 @@
   <button type="submit" >Search</button> 
 </form>
 
-<app-pokemon-detail [pokemon]="searchedPokmon"></app-pokemon-detail>
+<app-pokemon-detail [pokemon]="searchedPokmon" [movesNames]="movesNames" [statsNames]="statsNames"></app-pokemon-detail>
 
 <div>
   <h2>All Pokemons</h2>
