--- a/src/app/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokemon-detail/pokemon-detail.component.html
@@ -1,18 +1,18 @@
 <div *ngIf="pokemon">
   <h3><span>Name: </span>{{pokemon.name | titlecase}}</h3>
   <h3><span>Id: </span>{{pokemon.id}}</h3>
-  <h3 *ngIf="movesNames">
-    <span>Moves: ({{movesNames.length}})</span>
+  <div *ngIf="movesNames">
+    <h3><span>Moves: ({{movesNames.length}})</span></h3>
     <ul>
-      <li *ngFor="let movesName of movesNames">{{movesName}}</li>
+      <p><li *ngFor="let movesName of movesNames">{{movesName}}</li></p>
     </ul>
-  </h3>
-  <h3 *ngIf="statsNames">
-    <span>Stats: ({{statsNames.length}})</span>
+  </div>
+  <div *ngIf="statsNames">
+    <h3><span>Stats: ({{statsNames.length}})</span></h3>
     <ul>
-      <li *ngFor="let statsName of statsNames">{{statsName}}</li>
+      <p><li *ngFor="let statsName of statsNames">{{statsName}}</li></p>
     </ul>
-  </h3>
+  </div>
 </div>
 
 <div class="save-btn" *ngIf="pokemon">
