--- a/src/app/my-pokemoms/my-pokemoms.component.css
+++ b/src/app/my-pokemoms/my-pokemoms.component.css
@@ -3,7 +3,7 @@
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
-  width: 15em;
+  width: 16em;
 }
 .pokemons li {
   cursor: pointer;
@@ -49,4 +49,19 @@
 
 input {
   padding: .5rem;
+}
+
+button.delete {
+  position: absolute;
+  left: 200px;
+  top: 5px;
+  border: none;
+  color:  red;
+  font-size: 1.1rem;
+  padding: 1px 10px 3px 10px;
+}
+
+button.delete:hover {
+  background-color: #525252;
+  color: white;
 }
