--- a/src/app/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokemon-detail/pokemon-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="pokemon">
+<div class="container" *ngIf="pokemon">
   <h3><span>Name: </span>{{pokemon.name | titlecase}}</h3>
   <h3><span>Id: </span>{{pokemon.id}}</h3>
   <div *ngIf="movesNames">
