--- a/src/app/my-wishlist/my-wishlist.component.css
+++ b/src/app/my-wishlist/my-wishlist.component.css
@@ -51,17 +51,34 @@ input {
   padding: .5rem;
 }
 
-button.delete {
+
+.go-back {
+  padding: 1rem;
+  text-decoration: none;
+  margin-top: 10px;
+  margin-right: 1rem;
+  display: inline-block;
+  background-color: #e8e8e8;
+  color: #3d3d3d;
+  border-radius: 4px;
+}
+
+.go-back:hover {
+  color: white;
+  background-color: #42545C;
+}
+
+ .delete{
   position: absolute;
-  left: 200px;
   top: 5px;
+  right: 10px;
   border: none;
   color:  red;
   font-size: 1.1rem;
   padding: 1px 10px 3px 10px;
 }
 
-button.delete:hover {
+.delete:hover {
   background-color: #525252;
   color: white;
 }
