--- a/src/app/pokemon-detail/pokemon-detail.component.css
+++ b/src/app/pokemon-detail/pokemon-detail.component.css
@@ -1,3 +1,9 @@
+
+h3 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #3f525c
+}
+
 .save-btn a {
   padding: 1rem;
   text-decoration: none;
@@ -8,6 +14,11 @@
   color: #3d3d3d;
   border-radius: 4px;
   border: 2px solid black;
+}
+
+.save-btn a:hover {
+  color: white;
+  background-color: #42545C;
 }
 
 .all-names {
