--- a/src/app/pokemon-search/pokemon-search.component.css
+++ b/src/app/pokemon-search/pokemon-search.component.css
@@ -1,11 +1,7 @@
-label {
-  display: block;
-  font-weight: bold;
-  font-size: 1.2rem;
-  margin-top: 1rem;
-  margin-bottom: .5rem;
-
+* {
+  font-family: Arial, Helvetica, sans-serif;
 }
+
 input {
   padding: .5rem;
   margin-top: 1rem;
@@ -20,12 +16,11 @@ input:focus {
   outline: #336699 auto 1px;
 }
 
+
+/*paginated-list*/
 h2 {
   text-align: center;
-}
-
-li {
-  list-style-type: none;
+  color: #3f525c
 }
 
 .all-names {
@@ -45,7 +40,6 @@ li {
   align-content: flex-start;
   align-items: flex-start;
 }
-
 
 a {
   background-color: #3f525c;
@@ -76,12 +70,32 @@ button {
   background-color: #e8e8e8;
   color: #3d3d3d;
   border-radius: 4px;
+  width: 5rem;
+}
+
+button:hover {
+  color: white;
+  background-color: #42545C;
 }
 
 @media (min-width: 600px) {
   a {
-    width: 18%;
+    width: 10rem;
     box-sizing: content-box;
+  }
+
+  .container {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between
+  }
+
+  .detail-info {
+    width: 65%
+  }
+
+  .paginated-list {
+    width: 30%
   }
 }
 
